# NeoGoZero

./: .gitignore  JOURNAL.md  LLM_CODE_BUNDLE_CONVNEXT.md  LLM_CODE_BUNDLE_RESNET.md  README.md  pyproject.toml
architectures/convnext_policy_value/: README.md  __init__.py  convnext_policy_value.py  convnext_zero_loop.py  test_convnext_impl.py  train_convnext_zero.py
convnext_impl/: README.md  __init__.py  convnext_policy_value.py  convnext_zero_loop.py  test_convnext_impl.py  train_convnext_zero.py
go_engine/: __init__.py  board.py  game.py  types.py
match_evaluation/: __init__.py  match.py
play_and_train_commands/: generate_self_play.py  train_both_models_9x9_t4.py  train_tiny_policy_value.py  train_zero.py
policy_value_networks/: __init__.py
policy_value_networks/convnext_policy_value/: README.md  __init__.py  convnext_policy_value.py  convnext_zero_loop.py  test_convnext_impl.py  (+2 more)
run_experiments/: evaluate_mcts_vs_random.py  generate_self_play.py  play_mcts_vs_random.py  play_random_game.py  train_tiny_policy_value.py  train_zero.py
scripts/: evaluate_mcts_vs_random.py  generate_self_play.py  play_mcts_vs_random.py  play_random_game.py  train_tiny_policy_value.py  train_zero.py
search_players/: __init__.py  mcts_bot.py  random_bot.py
tests/: test_encoding.py  test_match.py  test_mcts_bot.py  test_policy_value_model.py  test_rules.py  test_self_play.py  test_supervised_pretraining.py  test_zero_loop.py
zero_training_pipeline/: __init__.py  encoding.py  self_play.py  supervised_pretraining.py  torch_training.py  weight_exports.py  zero_loop.py
(+34 files in other folders)
