[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoGoZero"
version = "0.1.0"
description = "A sequential AlphaGo Zero-style project starting with a Go rules engine."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
ml = ["torch>=2.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
